--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="evenTz"
+      content="Event-planning application :: Interview assignment"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>evenTz</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
